--- a/style.css
+++ b/style.css
@@ -101,20 +101,19 @@ header img {
     background-color: #45a049;
 }
 
-/* Formulário */
-.form-container {
+.formulario {
     padding: 50px;
     text-align: center;
     background-color: #f4f4f4d5;
 }
 
-.form-container input {
-    padding: 10px;
+.formulario input {
+    padding: 8px;
     width: 300px;
     margin: 10px 0;
 }
 
-.form-container button {
+.formulario button {
     padding: 10px 20px;
     background-color: #4CAF50;
     color: white;
@@ -128,4 +127,71 @@ footer {
     padding: 20px;
     background-color: #333;
     color: #fff;
+}
+
+/*ressponsividade*/
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    header img {
+        width: 80px;
+        margin-bottom: 10px;
+    }
+
+    header nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    header nav a {
+        margin: 10px 0;
+    }
+
+    .hero h1 {
+        font-size: 2rem;
+    }
+
+    .hero h3 {
+        font-size: 1rem;
+    }
+
+    .produtos {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+    }
+
+    .formulario input {
+        width: 100%;
+    }
+}
+
+
+@media (max-width: 480px) {
+    header nav {
+        flex-direction: column;
+    }
+
+    .hero h1 {
+        font-size: 1.5rem;
+    }
+
+    .produtos {
+        grid-template-columns: 1fr;
+    }
+
+    .produtos-itens img {
+        height: 120px;
+    }
+
+    .formulario input {
+        width: 100%;
+    }
+
+    footer {
+        font-size: 0.9rem;
+    }
 }
