--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ header {
 header .titulo {
     font-size: 1.5rem;
     background: linear-gradient(to right, #9f5e28, #ffdb69);
-    /* Degradê aplicado */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -43,7 +42,8 @@ header img {
 }
 
 .hero {
-    color: #ffffff;
+    background-color: #718355;
+    color: #ece9e9;
     text-align: center;
     padding: 117px 20px;
 }
@@ -60,8 +60,8 @@ header img {
 
 .hero button {
     padding: 10px 20px;
-    color: white;
-    background-color: #4CAF50;
+    color: #718355;
+    background-color: #d4d4d1d3;
     font-size: 1rem;
     border: none;
     border-radius: 10px;
@@ -71,13 +71,16 @@ header img {
 }
 
 .hero button:hover {
-    background-color: #45a049;
+    background-color: #181818;
+}
+.belezza{
+    color: #718355;
 }
 
 .produtos {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 20px;  
     padding: 50px 20px;
     background-color: #fff;
 }
@@ -104,7 +107,7 @@ header img {
 }
 
 .produtos-itens button {
-    background-color: #4CAF50;
+    background-color: #718355;
     color: white;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
@@ -133,7 +136,7 @@ header img {
 
 .formulario button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #718355;
     color: white;
     border: none;
     cursor: pointer;
